# buquet

./: .buquet.toml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.full.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/buquet/: Cargo.toml  README.md  justfile  pyproject.toml
crates/buquet-workflow/: .qo.toml  Cargo.toml  README.md  justfile  pyproject.toml
crates/buquet-workflow/examples/: README.md  order_workflow.py  research_workflow.py
crates/buquet-workflow/python/buquet_workflow/: __init__.py  _buquet_workflow.pyi  _rust.py  _types.py  client.py  dag.py  orchestrator.py  signals.py  state.py  steps.py  types.py  worker.py  workflow.py
crates/buquet-workflow/src/: dag.rs  engine.rs  error.rs  lib.rs  signals.rs  state.rs  sweeper.rs  types.rs
crates/buquet-workflow/src/python/: engine.rs  mod.rs  signals.rs  state.rs
crates/buquet-workflow/tests/: __init__.py  conftest.py  test_dag.py  test_orchestrator.py  test_signals.py  test_state.py  test_types.py  test_typing.py  test_workflow_e2e.py
crates/buquet/docs/specs/: max-concurrency.md
crates/buquet/examples/: README.md  config.example.toml  producer.rs  s3_lifecycle_demo.py  worker.py  worker.rs
crates/buquet/python/buquet/: __init__.py  _buquet.pyi  typing.py
crates/buquet/python/tests/: __init__.py  test_bulk_submission.py  test_cancellation.py  test_idempotency.py  test_lease_extension.py  test_payload_refs.py  test_schemas.py  test_shard_leasing.py  test_storage.py
crates/buquet/src/: config.rs  config_edge_case_tests.rs  lib.rs  main.rs
crates/buquet/src/cli/: commands.rs
crates/buquet/src/models/: retry.rs  task.rs  worker.rs
crates/buquet/src/python/: metrics.rs  mod.rs  queue.rs  storage.rs  task.rs  worker.rs
crates/buquet/src/queue/: idempotency_tests.rs  mod.rs  ops.rs  schema_edge_case_tests.rs  schema_tests.rs
crates/buquet/src/storage/: client.rs
crates/buquet/src/web/: handlers.rs  mod.rs
crates/buquet/src/worker/: claim.rs  execute.rs  handler.rs  lease_extension_tests.rs  mod.rs  monitor.rs  runner.rs  shard_lease.rs  shard_lease_manager.rs  transitions.rs
crates/buquet/tests/chaos/: main.rs  slow_storage.rs  worker_crash.rs
crates/buquet/tests/integration/: cancellation.rs  common.rs  concurrent_claim.rs  expiration.rs  idempotency.rs  payload_refs.rs  retry_exhaustion.rs  scheduling.rs  shard_leasing.rs  submit_claim_complete.rs  timeout_recovery.rs  version_history.rs
crates/buquet/tests/load/: main.rs  metrics.rs  producer.rs  worker.rs
crates/oq/: Cargo.toml  justfile  pyproject.toml
crates/oq-workflows/: Cargo.toml  README.md  justfile  pyproject.toml
crates/qo/: Cargo.toml  README.md  justfile  pyproject.toml
crates/qow/: Cargo.toml  README.md  justfile  pyproject.toml
crates/qow/examples/: README.md  order_workflow.py  research_workflow.py
crates/qow/python/qow/: __init__.py  _qow.pyi  _rust.py  _types.py  client.py  dag.py  orchestrator.py  signals.py  state.py  steps.py  types.py  worker.py  workflow.py
crates/qow/src/: engine.rs  error.rs  lib.rs  signals.rs  state.rs  sweeper.rs  types.rs
crates/qow/src/python/: engine.rs  mod.rs  signals.rs  state.rs  types.rs
crates/qow/tests/: __init__.py  conftest.py  test_dag.py  test_orchestrator.py  test_signals.py  test_state.py  test_types.py  test_typing.py  test_workflow_e2e.py
docs/: MVP.md  PLAN.md  S3-REFERENCES.md  getting-started.md
docs/bugs/: BUG-001-history-pagination.md  BUG-002-monitor-required-for-liveness.md  BUG-003-shard-starvation.md  BUG-004-monitor-sweeper-full-scans.md  BUG-005-authoritative-time.md  BUG-006-versioning-enforcement.md  BUG-007-input-output-refs-unimplemented.md  BUG-008-tests-ignored.md  BUG-009-exactly-once-effects.md  BUG-010-ready-index-bucket-filtering.md  BUG-011-long-running-tasks-no-lease-extension.md  BUG-012-scheduler-last-run-before-submit.md  BUG-013-idempotency-record-missing-task.md  BUG-014-schedule-last-task-id-not-updated.md  BUG-015-schedule-timezone-catchup-ignored.md  BUG-016-list-ready-includes-future-tasks.md  BUG-017-missing-tests-scheduler-idempotency.md  worker-claims-unhandled-tasks.md
docs/features/: README.md  adaptive-polling.md  bulk-submission.md  config-files.md  configurable-shards.md  direct-dispatch.md  doctor-command.md  future.md  global-pause.md  idempotency-keys.md  list-task-type-filter.md  metrics.md  opentelemetry.md  payload-references.md  priorities.md  progress-reporting.md  rate-limiting.md  result-chaining.md  richer-errors.md  scheduling.md  shard-leases.md  shell-completions.md  tail-command.md  task-cancellation.md  task-expiration.md  task-groups.md  task-lease-extension.md  task-namespaces.md  task-parent-child-metadata.md  task-schemas.md  task-tagging.md  version-history-retention.md  worker-lease-renewal.md  worker-lifecycle-hooks.md
docs/guides/: s3-compatibility.md  task-queue-comparison.md  version-history-retention.md
docs/issues/: ISSUE-001-at-least-once-effects.md  ISSUE-002-list-bound-latency-cost.md  ISSUE-003-s3-compat-variance.md  ISSUE-004-version-history-costs.md  ISSUE-005-load-and-chaos-testing.md
examples/: .env.example  README.md  config.example.toml  producer.py  producer.rs  worker.rs
python/: README.md
python/buquet/: _buquet.pyi
python/tests/: conftest.py  test_cli.py  test_exceptions.py  test_expiration.py  test_imports.py  test_reschedule.py  test_shard_leasing.py  test_worker_hooks.py
scripts/: gh-ci-errors.sh  init-localstack.sh
src/: config.rs  config_edge_case_tests.rs  lib.rs  main.rs
src/cli/: mod.rs
src/migration/: shard_migrate.rs
src/models/: edge_case_tests.rs  retry.rs  task.rs  worker.rs
src/python/: config.rs  mod.rs  queue.rs  schedule.rs  storage.rs  task.rs  worker.rs
src/queue/: error.rs  idempotency.rs  idempotency_tests.rs  ops.rs  schedule.rs  schema_edge_case_tests.rs  schema_tests.rs
src/web/: handlers.rs  templates.rs
src/worker/: claim.rs  edge_case_tests.rs  execute.rs  handler.rs  polling.rs  runner.rs  shard_lease_tests.rs
src/workflow/: dag.rs  engine.rs  (+6 more)
(+263 files in other folders)
