[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[project]
name = "qo-workspace"
version = "0.1.0"
description = "qo workspace"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.11,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.uv.workspace]
members = ["crates/qo", "crates/qow"]

[tool.uv.sources]
qo = { workspace = true }
