[package]
name = "buquet-workflow"
version = "0.1.0"
edition = "2021"
description = "Durable workflow orchestration built on buquet"
license = "MIT"
repository = "https://github.com/h0rv/buquet"
homepage = "https://github.com/h0rv/buquet"
readme = "README.md"
keywords = ["workflow", "orchestration", "durable", "task-queue", "s3"]
categories = ["asynchronous", "concurrency"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "buquet-workflow"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pythonize"]
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:anyhow", "dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
buquet = { path = "../buquet", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["experimental-async", "extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.27", optional = true }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
todo = "deny"
dbg_macro = "deny"
unimplemented = "deny"
