[package]
name = "buquet"
version = "0.1.0"
edition = "2021"
description = "A task queue built on object storage. S3 is the control plane."
license = "MIT"
repository = "https://github.com/h0rv/buquet"
homepage = "https://github.com/h0rv/buquet"
readme = "../../README.md"
keywords = ["task-queue", "s3", "async", "worker", "job"]
categories = ["asynchronous", "concurrency"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pythonize", "metrics-full"]
integration = []
load-tests = []
chaos-tests = []

# Metrics exporters (optional - enable the ones you need)
prometheus = ["dep:metrics-exporter-prometheus"]
statsd = ["dep:metrics-exporter-statsd"]
opentelemetry = ["dep:metrics-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

# All metrics exporters for Python wheels
metrics-full = ["prometheus", "statsd", "opentelemetry"]

[dependencies]
# S3
aws-sdk-s3 = "1"
aws-config = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
jsonschema = "0.40"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
rand = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Configuration
config = "0.15"
toml = "0.8"
dirs = "6"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (facade - users pick their exporter)
metrics = "0.24"

# Metrics exporters (optional)
metrics-exporter-prometheus = { version = "0.18", optional = true }
metrics-exporter-statsd = { version = "0.9", optional = true }
metrics-opentelemetry = { version = "0.24", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"], optional = true }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Web UI
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
maud = { version = "0.27", features = ["axum"] }
tokio-stream = "0.1"

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["experimental-async", "extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.27", optional = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
todo = "deny"
dbg_macro = "deny"
unimplemented = "deny"
